--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "astro dev",
-		"start": "astro dev && chokidar 'src/**/*' -c 'astro build'",
+		"start": "astro dev && chokidar 'src/**/*.ts' -c 'tsc'",
 		"build": "astro check && astro build",
 		"preview": "astro preview",
 		"astro": "astro"
@@ -12,10 +12,10 @@
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/tailwind": "^5.1.2",
+		"@astrojs/ts-plugin": "^1.10.4",
 		"@types/google.maps": "^3.58.1",
 		"astro": "^4.16.7",
 		"chokidar-cli": "^3.0.0",
-		"tailwindcss": "^3.4.14",
-		"typescript": "^5.6.3"
+		"tailwindcss": "^3.4.14"
 	}
 }
