--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 		"astro": "^4.16.7",
 		"chokidar-cli": "^3.0.0",
 		"tailwindcss": "^3.4.14"
+	},
+	"devDependencies": {
+		"@types/jquery": "^3.5.32"
 	}
 }
